//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Donation Tracker" {
  database_type: 'PostgreSQL'
  Note: 'Donation Tracker'
}

Table User {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  walletAddress Bytes [unique]
  profileImage String
  organizations Organization [not null]
}

Table Organization {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  description String [not null]
  profileImage String
  contractAddress Bytes [unique, not null]
  isVerified Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  users User [not null]
  donatedItems Transaction [not null]
  receivedItems Transaction [not null]
}

Table Transaction {
  id Int [pk, increment]
  amount Float [not null]
  txHash Bytes [unique, not null]
  description String [not null]
  status Status [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  donorId Int [not null]
  doneeId Int [not null]
  updatedAt DateTime [not null]
  isApproved Boolean [not null, default: false]
  donor Organization [not null]
  donee Organization [not null]
}

Table Report {
  id Int [pk, increment]
  txHash Bytes [unique, not null]
  totalBeneficiaries Int [not null]
  details String [not null]
  adminCostPercent Int [not null]
  gender_m Int [not null]
  gender_f Int [not null]
  gender_o Int [not null]
  age Json [not null]
  bank_y Int [not null]
  bank_n Int [not null]
  internet_y Int [not null]
  internet_n Int [not null]
  phone_y Int [not null]
  phone_n Int [not null]
  photos Json [not null]
  benTxHash Json [not null]
}

Enum Status {
  PENDING
  ACCEPTED
  REJECTED
  COMPLETED
}

Ref: Transaction.donorId > Organization.id

Ref: Transaction.doneeId > Organization.id